phase2/y.output
Grammar

    0 $accept: program $end

    1 program: Functions

    2 Functions: Function Functions
    3          | %empty

    4 Function: FUNCTION IDENTIFIER LFTPAREN Parameters RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    5 Parameter: INTEGER IDENTIFIER

    6 Parameters: %empty
    7           | Parameters COMMA Parameter
    8           | Parameter

    9 FuncBody: %empty
   10         | Statements

   11 Statements: Statement SEMICOLON Statements
   12           | Statement SEMICOLON

   13 Statement: Var EQUALS Expression
   14          | INTEGER Var
   15          | INTEGER Var EQUALS Expression
   16          | IF LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY ElseStatement
   17          | WHILE LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY
   18          | FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY
   19          | READ Vars
   20          | PRINT Vars
   21          | CONT
   22          | RETURN Expression
   23          | BREAK

   24 ElseStatement: %empty
   25              | ELSE LEFTCURLY Statements RIGHTCURLY

   26 Expression: MultExp
   27           | MultExp PLUS Expression
   28           | MultExp MINUS Expression
   29           | IDENTIFIER LFTPAREN Vars RGTPAREN

   30 MultExp: Term
   31        | Term TIMES MultExp
   32        | Term DIVIDE MultExp
   33        | Term MOD MultExp

   34 Term: Var
   35     | MINUS Var
   36     | NUMBER
   37     | MINUS NUMBER

   38 Var: IDENTIFIER LEFTBRACK Expression RIGHTBRACK
   39    | IDENTIFIER
   40    | LFTPAREN Expression RGTPAREN

   41 Vars: Var
   42     | Var COMMA Vars

   43 TrueFalse: Var EQUALITY Var
   44          | Var NOTEQL Var
   45          | Var LESS Var
   46          | Var LESSEQL Var
   47          | Var GREATER Var
   48          | Var GREATEREQL Var


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 18 36 37
IDENTIFIER (259) 4 5 18 29 38 39
FUNCTION (260) 4
SEMICOLON (261) 11 12 18
LEFTCURLY (262) 4 16 17 18 25
RIGHTCURLY (263) 4 16 17 18 25
LEFTBRACK (264) 38
RIGHTBRACK (265) 38
COMMA (266) 7 42
RETURN (267) 22
INTEGER (268) 5 14 15 18
PRINT (269) 20
READ (270) 19
WHILE (271) 17
IF (272) 16
ELSE (273) 25
BREAK (274) 23
CONT (275) 21
FOR (276) 18
PLUS (277) 27
MINUS (278) 28 35 37
TIMES (279) 31
DIVIDE (280) 32
MOD (281) 33
LFTPAREN (282) 4 16 17 18 29 40
RGTPAREN (283) 4 16 17 18 29 40
EQUALS (284) 13 15 18
LESS (285) 45
LESSEQL (286) 46
GREATER (287) 47
GREATEREQL (288) 48
EQUALITY (289) 43
NOTEQL (290) 44


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
Functions (38)
    on left: 2 3, on right: 1 2
Function (39)
    on left: 4, on right: 2
Parameter (40)
    on left: 5, on right: 7 8
Parameters (41)
    on left: 6 7 8, on right: 4 7
FuncBody (42)
    on left: 9 10, on right: 4 16 17 18
Statements (43)
    on left: 11 12, on right: 10 11 25
Statement (44)
    on left: 13 14 15 16 17 18 19 20 21 22 23, on right: 11 12
ElseStatement (45)
    on left: 24 25, on right: 16
Expression (46)
    on left: 26 27 28 29, on right: 13 15 18 22 27 28 38 40
MultExp (47)
    on left: 30 31 32 33, on right: 26 27 28 31 32 33
Term (48)
    on left: 34 35 36 37, on right: 30 31 32 33
Var (49)
    on left: 38 39 40, on right: 13 14 15 34 35 41 42 43 44 45 46 47
    48
Vars (50)
    on left: 41 42, on right: 19 20 29 42
TrueFalse (51)
    on left: 43 44 45 46 47 48, on right: 16 17 18


State 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 3 (Functions)

    program    go to state 2
    Functions  go to state 3
    Function   go to state 4


State 1

    4 Function: FUNCTION . IDENTIFIER LFTPAREN Parameters RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: Functions .

    $default  reduce using rule 1 (program)


State 4

    2 Functions: Function . Functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 3 (Functions)

    Functions  go to state 7
    Function   go to state 4


State 5

    4 Function: FUNCTION IDENTIFIER . LFTPAREN Parameters RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    LFTPAREN  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 Functions: Function Functions .

    $default  reduce using rule 2 (Functions)


State 8

    4 Function: FUNCTION IDENTIFIER LFTPAREN . Parameters RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    INTEGER  shift, and go to state 9

    $default  reduce using rule 6 (Parameters)

    Parameter   go to state 10
    Parameters  go to state 11


State 9

    5 Parameter: INTEGER . IDENTIFIER

    IDENTIFIER  shift, and go to state 12


State 10

    8 Parameters: Parameter .

    $default  reduce using rule 8 (Parameters)


State 11

    4 Function: FUNCTION IDENTIFIER LFTPAREN Parameters . RGTPAREN LEFTCURLY FuncBody RIGHTCURLY
    7 Parameters: Parameters . COMMA Parameter

    COMMA     shift, and go to state 13
    RGTPAREN  shift, and go to state 14


State 12

    5 Parameter: INTEGER IDENTIFIER .

    $default  reduce using rule 5 (Parameter)


State 13

    7 Parameters: Parameters COMMA . Parameter

    INTEGER  shift, and go to state 9

    Parameter  go to state 15


State 14

    4 Function: FUNCTION IDENTIFIER LFTPAREN Parameters RGTPAREN . LEFTCURLY FuncBody RIGHTCURLY

    LEFTCURLY  shift, and go to state 16


State 15

    7 Parameters: Parameters COMMA Parameter .

    $default  reduce using rule 7 (Parameters)


State 16

    4 Function: FUNCTION IDENTIFIER LFTPAREN Parameters RGTPAREN LEFTCURLY . FuncBody RIGHTCURLY

    IDENTIFIER  shift, and go to state 17
    RETURN      shift, and go to state 18
    INTEGER     shift, and go to state 19
    PRINT       shift, and go to state 20
    READ        shift, and go to state 21
    WHILE       shift, and go to state 22
    IF          shift, and go to state 23
    BREAK       shift, and go to state 24
    CONT        shift, and go to state 25
    FOR         shift, and go to state 26
    LFTPAREN    shift, and go to state 27

    $default  reduce using rule 9 (FuncBody)

    FuncBody    go to state 28
    Statements  go to state 29
    Statement   go to state 30
    Var         go to state 31


State 17

   38 Var: IDENTIFIER . LEFTBRACK Expression RIGHTBRACK
   39    | IDENTIFIER .

    LEFTBRACK  shift, and go to state 32

    $default  reduce using rule 39 (Var)


State 18

   22 Statement: RETURN . Expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 36
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 19

   14 Statement: INTEGER . Var
   15          | INTEGER . Var EQUALS Expression

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 40


State 20

   20 Statement: PRINT . Vars

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var   go to state 41
    Vars  go to state 42


State 21

   19 Statement: READ . Vars

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var   go to state 41
    Vars  go to state 43


State 22

   17 Statement: WHILE . LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    LFTPAREN  shift, and go to state 44


State 23

   16 Statement: IF . LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY ElseStatement

    LFTPAREN  shift, and go to state 45


State 24

   23 Statement: BREAK .

    $default  reduce using rule 23 (Statement)


State 25

   21 Statement: CONT .

    $default  reduce using rule 21 (Statement)


State 26

   18 Statement: FOR . LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    LFTPAREN  shift, and go to state 46


State 27

   40 Var: LFTPAREN . Expression RGTPAREN

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 47
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 28

    4 Function: FUNCTION IDENTIFIER LFTPAREN Parameters RGTPAREN LEFTCURLY FuncBody . RIGHTCURLY

    RIGHTCURLY  shift, and go to state 48


State 29

   10 FuncBody: Statements .

    $default  reduce using rule 10 (FuncBody)


State 30

   11 Statements: Statement . SEMICOLON Statements
   12           | Statement . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 31

   13 Statement: Var . EQUALS Expression

    EQUALS  shift, and go to state 50


State 32

   38 Var: IDENTIFIER LEFTBRACK . Expression RIGHTBRACK

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 51
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 33

   36 Term: NUMBER .

    $default  reduce using rule 36 (Term)


State 34

   29 Expression: IDENTIFIER . LFTPAREN Vars RGTPAREN
   38 Var: IDENTIFIER . LEFTBRACK Expression RIGHTBRACK
   39    | IDENTIFIER .

    LEFTBRACK  shift, and go to state 32
    LFTPAREN   shift, and go to state 52

    $default  reduce using rule 39 (Var)


State 35

   35 Term: MINUS . Var
   37     | MINUS . NUMBER

    NUMBER      shift, and go to state 53
    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 54


State 36

   22 Statement: RETURN Expression .

    $default  reduce using rule 22 (Statement)


State 37

   26 Expression: MultExp .
   27           | MultExp . PLUS Expression
   28           | MultExp . MINUS Expression

    PLUS   shift, and go to state 55
    MINUS  shift, and go to state 56

    $default  reduce using rule 26 (Expression)


State 38

   30 MultExp: Term .
   31        | Term . TIMES MultExp
   32        | Term . DIVIDE MultExp
   33        | Term . MOD MultExp

    TIMES   shift, and go to state 57
    DIVIDE  shift, and go to state 58
    MOD     shift, and go to state 59

    $default  reduce using rule 30 (MultExp)


State 39

   34 Term: Var .

    $default  reduce using rule 34 (Term)


State 40

   14 Statement: INTEGER Var .
   15          | INTEGER Var . EQUALS Expression

    EQUALS  shift, and go to state 60

    $default  reduce using rule 14 (Statement)


State 41

   41 Vars: Var .
   42     | Var . COMMA Vars

    COMMA  shift, and go to state 61

    $default  reduce using rule 41 (Vars)


State 42

   20 Statement: PRINT Vars .

    $default  reduce using rule 20 (Statement)


State 43

   19 Statement: READ Vars .

    $default  reduce using rule 19 (Statement)


State 44

   17 Statement: WHILE LFTPAREN . TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var        go to state 62
    TrueFalse  go to state 63


State 45

   16 Statement: IF LFTPAREN . TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY ElseStatement

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var        go to state 62
    TrueFalse  go to state 64


State 46

   18 Statement: FOR LFTPAREN . INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    INTEGER  shift, and go to state 65


State 47

   40 Var: LFTPAREN Expression . RGTPAREN

    RGTPAREN  shift, and go to state 66


State 48

    4 Function: FUNCTION IDENTIFIER LFTPAREN Parameters RGTPAREN LEFTCURLY FuncBody RIGHTCURLY .

    $default  reduce using rule 4 (Function)


State 49

   11 Statements: Statement SEMICOLON . Statements
   12           | Statement SEMICOLON .

    IDENTIFIER  shift, and go to state 17
    RETURN      shift, and go to state 18
    INTEGER     shift, and go to state 19
    PRINT       shift, and go to state 20
    READ        shift, and go to state 21
    WHILE       shift, and go to state 22
    IF          shift, and go to state 23
    BREAK       shift, and go to state 24
    CONT        shift, and go to state 25
    FOR         shift, and go to state 26
    LFTPAREN    shift, and go to state 27

    $default  reduce using rule 12 (Statements)

    Statements  go to state 67
    Statement   go to state 30
    Var         go to state 31


State 50

   13 Statement: Var EQUALS . Expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 68
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 51

   38 Var: IDENTIFIER LEFTBRACK Expression . RIGHTBRACK

    RIGHTBRACK  shift, and go to state 69


State 52

   29 Expression: IDENTIFIER LFTPAREN . Vars RGTPAREN

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var   go to state 41
    Vars  go to state 70


State 53

   37 Term: MINUS NUMBER .

    $default  reduce using rule 37 (Term)


State 54

   35 Term: MINUS Var .

    $default  reduce using rule 35 (Term)


State 55

   27 Expression: MultExp PLUS . Expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 71
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 56

   28 Expression: MultExp MINUS . Expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 72
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 57

   31 MultExp: Term TIMES . MultExp

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 17
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    MultExp  go to state 73
    Term     go to state 38
    Var      go to state 39


State 58

   32 MultExp: Term DIVIDE . MultExp

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 17
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    MultExp  go to state 74
    Term     go to state 38
    Var      go to state 39


State 59

   33 MultExp: Term MOD . MultExp

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 17
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    MultExp  go to state 75
    Term     go to state 38
    Var      go to state 39


State 60

   15 Statement: INTEGER Var EQUALS . Expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 76
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 61

   42 Vars: Var COMMA . Vars

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var   go to state 41
    Vars  go to state 77


State 62

   43 TrueFalse: Var . EQUALITY Var
   44          | Var . NOTEQL Var
   45          | Var . LESS Var
   46          | Var . LESSEQL Var
   47          | Var . GREATER Var
   48          | Var . GREATEREQL Var

    LESS        shift, and go to state 78
    LESSEQL     shift, and go to state 79
    GREATER     shift, and go to state 80
    GREATEREQL  shift, and go to state 81
    EQUALITY    shift, and go to state 82
    NOTEQL      shift, and go to state 83


State 63

   17 Statement: WHILE LFTPAREN TrueFalse . RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    RGTPAREN  shift, and go to state 84


State 64

   16 Statement: IF LFTPAREN TrueFalse . RGTPAREN LEFTCURLY FuncBody RIGHTCURLY ElseStatement

    RGTPAREN  shift, and go to state 85


State 65

   18 Statement: FOR LFTPAREN INTEGER . IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    IDENTIFIER  shift, and go to state 86


State 66

   40 Var: LFTPAREN Expression RGTPAREN .

    $default  reduce using rule 40 (Var)


State 67

   11 Statements: Statement SEMICOLON Statements .

    $default  reduce using rule 11 (Statements)


State 68

   13 Statement: Var EQUALS Expression .

    $default  reduce using rule 13 (Statement)


State 69

   38 Var: IDENTIFIER LEFTBRACK Expression RIGHTBRACK .

    $default  reduce using rule 38 (Var)


State 70

   29 Expression: IDENTIFIER LFTPAREN Vars . RGTPAREN

    RGTPAREN  shift, and go to state 87


State 71

   27 Expression: MultExp PLUS Expression .

    $default  reduce using rule 27 (Expression)


State 72

   28 Expression: MultExp MINUS Expression .

    $default  reduce using rule 28 (Expression)


State 73

   31 MultExp: Term TIMES MultExp .

    $default  reduce using rule 31 (MultExp)


State 74

   32 MultExp: Term DIVIDE MultExp .

    $default  reduce using rule 32 (MultExp)


State 75

   33 MultExp: Term MOD MultExp .

    $default  reduce using rule 33 (MultExp)


State 76

   15 Statement: INTEGER Var EQUALS Expression .

    $default  reduce using rule 15 (Statement)


State 77

   42 Vars: Var COMMA Vars .

    $default  reduce using rule 42 (Vars)


State 78

   45 TrueFalse: Var LESS . Var

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 88


State 79

   46 TrueFalse: Var LESSEQL . Var

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 89


State 80

   47 TrueFalse: Var GREATER . Var

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 90


State 81

   48 TrueFalse: Var GREATEREQL . Var

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 91


State 82

   43 TrueFalse: Var EQUALITY . Var

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 92


State 83

   44 TrueFalse: Var NOTEQL . Var

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var  go to state 93


State 84

   17 Statement: WHILE LFTPAREN TrueFalse RGTPAREN . LEFTCURLY FuncBody RIGHTCURLY

    LEFTCURLY  shift, and go to state 94


State 85

   16 Statement: IF LFTPAREN TrueFalse RGTPAREN . LEFTCURLY FuncBody RIGHTCURLY ElseStatement

    LEFTCURLY  shift, and go to state 95


State 86

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER . EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    EQUALS  shift, and go to state 96


State 87

   29 Expression: IDENTIFIER LFTPAREN Vars RGTPAREN .

    $default  reduce using rule 29 (Expression)


State 88

   45 TrueFalse: Var LESS Var .

    $default  reduce using rule 45 (TrueFalse)


State 89

   46 TrueFalse: Var LESSEQL Var .

    $default  reduce using rule 46 (TrueFalse)


State 90

   47 TrueFalse: Var GREATER Var .

    $default  reduce using rule 47 (TrueFalse)


State 91

   48 TrueFalse: Var GREATEREQL Var .

    $default  reduce using rule 48 (TrueFalse)


State 92

   43 TrueFalse: Var EQUALITY Var .

    $default  reduce using rule 43 (TrueFalse)


State 93

   44 TrueFalse: Var NOTEQL Var .

    $default  reduce using rule 44 (TrueFalse)


State 94

   17 Statement: WHILE LFTPAREN TrueFalse RGTPAREN LEFTCURLY . FuncBody RIGHTCURLY

    IDENTIFIER  shift, and go to state 17
    RETURN      shift, and go to state 18
    INTEGER     shift, and go to state 19
    PRINT       shift, and go to state 20
    READ        shift, and go to state 21
    WHILE       shift, and go to state 22
    IF          shift, and go to state 23
    BREAK       shift, and go to state 24
    CONT        shift, and go to state 25
    FOR         shift, and go to state 26
    LFTPAREN    shift, and go to state 27

    $default  reduce using rule 9 (FuncBody)

    FuncBody    go to state 97
    Statements  go to state 29
    Statement   go to state 30
    Var         go to state 31


State 95

   16 Statement: IF LFTPAREN TrueFalse RGTPAREN LEFTCURLY . FuncBody RIGHTCURLY ElseStatement

    IDENTIFIER  shift, and go to state 17
    RETURN      shift, and go to state 18
    INTEGER     shift, and go to state 19
    PRINT       shift, and go to state 20
    READ        shift, and go to state 21
    WHILE       shift, and go to state 22
    IF          shift, and go to state 23
    BREAK       shift, and go to state 24
    CONT        shift, and go to state 25
    FOR         shift, and go to state 26
    LFTPAREN    shift, and go to state 27

    $default  reduce using rule 9 (FuncBody)

    FuncBody    go to state 98
    Statements  go to state 29
    Statement   go to state 30
    Var         go to state 31


State 96

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS . NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    NUMBER  shift, and go to state 99


State 97

   17 Statement: WHILE LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody . RIGHTCURLY

    RIGHTCURLY  shift, and go to state 100


State 98

   16 Statement: IF LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody . RIGHTCURLY ElseStatement

    RIGHTCURLY  shift, and go to state 101


State 99

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER . SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    SEMICOLON  shift, and go to state 102


State 100

   17 Statement: WHILE LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY .

    $default  reduce using rule 17 (Statement)


State 101

   16 Statement: IF LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY . ElseStatement

    ELSE  shift, and go to state 103

    $default  reduce using rule 24 (ElseStatement)

    ElseStatement  go to state 104


State 102

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON . TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    IDENTIFIER  shift, and go to state 17
    LFTPAREN    shift, and go to state 27

    Var        go to state 62
    TrueFalse  go to state 105


State 103

   25 ElseStatement: ELSE . LEFTCURLY Statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 106


State 104

   16 Statement: IF LFTPAREN TrueFalse RGTPAREN LEFTCURLY FuncBody RIGHTCURLY ElseStatement .

    $default  reduce using rule 16 (Statement)


State 105

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse . SEMICOLON Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    SEMICOLON  shift, and go to state 107


State 106

   25 ElseStatement: ELSE LEFTCURLY . Statements RIGHTCURLY

    IDENTIFIER  shift, and go to state 17
    RETURN      shift, and go to state 18
    INTEGER     shift, and go to state 19
    PRINT       shift, and go to state 20
    READ        shift, and go to state 21
    WHILE       shift, and go to state 22
    IF          shift, and go to state 23
    BREAK       shift, and go to state 24
    CONT        shift, and go to state 25
    FOR         shift, and go to state 26
    LFTPAREN    shift, and go to state 27

    Statements  go to state 108
    Statement   go to state 30
    Var         go to state 31


State 107

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON . Expression RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    MINUS       shift, and go to state 35
    LFTPAREN    shift, and go to state 27

    Expression  go to state 109
    MultExp     go to state 37
    Term        go to state 38
    Var         go to state 39


State 108

   25 ElseStatement: ELSE LEFTCURLY Statements . RIGHTCURLY

    RIGHTCURLY  shift, and go to state 110


State 109

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression . RGTPAREN LEFTCURLY FuncBody RIGHTCURLY

    RGTPAREN  shift, and go to state 111


State 110

   25 ElseStatement: ELSE LEFTCURLY Statements RIGHTCURLY .

    $default  reduce using rule 25 (ElseStatement)


State 111

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN . LEFTCURLY FuncBody RIGHTCURLY

    LEFTCURLY  shift, and go to state 112


State 112

   18 Statement: FOR LFTPAREN INTEGER IDENTIFIER EQUALS NUMBER SEMICOLON TrueFalse SEMICOLON Expression RGTPAREN LEFTCURLY . FuncBody RIGHTCURLY
